# hourglass

./: .gitignore  .gitlab-ci.yml  .gitmodules  CMakeLists.txt  README.md
cmake/: deps.cmake
config/: CMakeLists.txt  learner.cfg  lstm_tracker.cfg  pid_tracker.cfg  tracker.cfg
lib/: CMakeLists.txt  lib.cmake
lib/ftsvc/: CMakeLists.txt  ftsvc.cpp  ftsvc.hpp
lib/lib1/: CMakeLists.txt  demo_cpp.cpp
lib/lib2/: CMakeLists.txt  demo.h  demo_c.c  demo_cpp.cpp
lib/tracker/: CMakeLists.txt  tkr_arg.cpp  tkr_argdef.cpp  tkr_argdef.hpp  tkr_private.hpp  tracker.cpp  tracker.hpp
lib/trasvc/: CMakeLists.txt  trasvc.c  trasvc.h  trasvc_client.c  trasvc_cmd.c  trasvc_data.c  trasvc_func.c  trasvc_msg.c  trasvc_net.c  trasvc_parse.c  trasvc_private.h  trasvc_task.c  trasvc_types.h
lib/wclt/: CMakeLists.txt  wclt.c  wclt.h  wclt_net.c  wclt_private.h
test/: CMakeLists.txt  test_demo.cpp  test_deps1.c  test_deps2.c  test_hts_console.cpp  test_hts_exchange.cpp  test_lib_link.cpp  test_tracker.cpp  test_trasvc_cmd_parse.cpp  test_trasvc_create.cpp  test_trasvc_data_append.cpp  test_trasvc_exchange.cpp  test_trasvc_task.cpp  test_trasvc_task_stable.cpp  test_wclt.c
util/: util.cmake
util/hourglass_model_randgen/: CMakeLists.txt
util/hourglass_monitor/: CMakeLists.txt  debug.hpp  hourglass_monitor.pro  mainwindow.cpp  mainwindow.h  mainwindow.ui  qctrlpanel.cpp  qctrlpanel.h  ts_associate.cpp  wsvr_associate.cpp
util/hourglass_training_server/: CMakeLists.txt  main.c
util/learner/: CMakeLists.txt  learner.hpp  main.cpp  tracker.cpp  tracker.hpp  tracker_arg.cpp
util/lstm_tracker/: CMakeLists.txt  main.cpp  tracker.cpp  tracker.hpp  tracker_arg.cpp
util/lstm_trainer/: CMakeLists.txt  lstm_trainer.h  lstm_trainer_arg.c  main.c
util/pid_tracker/: CMakeLists.txt  main.cpp  tracker.cpp  tracker.hpp
util/rand_model/: CMakeLists.txt  main.c
util/tracker/: CMakeLists.txt  main.cpp  tracker.cpp  tracker.hpp  tracker_arg.cpp
util/trasvr/: CMakeLists.txt  hts.h  hts_arg.c
util/util1/: CMakeLists.txt  main.c
util/util2/: CMakeLists.txt  main.cpp
